# himas-mlops

./: .gitignore  LICENSE  README.md  build-alert.yaml  cloudbuild.yaml  cloudbuild.yaml.vertexai-backup  cloudbuild_addition.yaml  deployed_model_test_20251206_183536.json  feature_order.pkl  predictor.py  test_predictions.sh
GCP/flower-numpy-example/: README.md  pyproject.toml  superexec.Dockerfile
GCP/flower-numpy-example/flower_numpy_example/: __init__.py  client_app.py  server_app.py  task.py
GCP/flower-numpy-example/k8s-deployments/: k8s-deploy.sh  k8s-shutdown.sh  superexec-clientapp-1-deployment.yaml  superexec-clientapp-2-deployment.yaml  superexec-serverapp-deployment.yaml  superlink-deployment.yaml  supernode-1-deployment.yaml  supernode-2-deployment.yaml
GCP/himas-federated-agents/: .env.example  README.md  demo_check_model_prediction.md  demo_interaction.md  deploy_all_agents.sh  pyproject.toml
GCP/himas-federated-agents/agent_hospital_a/: __init__.py  agent.py  config.py  data_mappings.py  prompt.py  requirements.txt
GCP/himas-federated-agents/agent_hospital_a/subagents/case_consultation/: __init__.py  agent.py  prompt.py
GCP/himas-federated-agents/agent_hospital_a/subagents/clinical_decision/: __init__.py  agent.py  prompt.py
GCP/himas-federated-agents/agent_hospital_a/subagents/privacy_guardian/: __init__.py  agent.py  prompt.py
GCP/himas-federated-agents/agent_hospital_a/subagents/resource_allocation/: __init__.py  agent.py  prompt.py
GCP/himas-federated-agents/agent_hospital_a/subagents/treatment_optimization/: __init__.py  agent.py  prompt.py
GCP/himas-federated-agents/agent_hospital_a/utils/: bigquery_client.py  data_preprocessor.py  debug_bigquery_audit.py  feature_extractor.py
GCP/himas-federated-agents/remote_a2a/: README.md  agent.py
GCP/himas-federated-agents/remote_a2a/federated_coordinator/: .gitignore  __init__.py  agent.py  main.py  prompt.py  requirements.txt
GCP/himas-federated-agents/remote_a2a/federated_coordinator/tools/: __init__.py  capability_tools.py  config.py  consultation_tools.py  privacy_tools.py  statistics_tools.py  transfer_tools.py
GCP/himas-federated-agents/tests/: test_feature_extractor.py  verify_import.py
PoC/: .gitignore  main.py  (+6 more)
PoC/Data-Pipeline/: .dockerignore  .dvcignore  .dvcignore    .env  .gitignore  Dockerfile  README.md  cleanup.sh  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
PoC/Data-Pipeline/.dvc/: config
PoC/Data-Pipeline/.github/workflows/: pr-checks.yml
PoC/Data-Pipeline/config/: airflow.cfg
PoC/Data-Pipeline/dags/: debug_env.py  himas_bigquery_demo.py  test_email_dag.py
PoC/Data-Pipeline/dags/.dvc/: config
PoC/Data-Pipeline/dags/data/: .gitignore  bigquery.dvc
PoC/Data-Pipeline/dags/data/reports/: data_leakage_check.csv  data_leakage_check.json  dataset_statistics.csv  dataset_statistics.json
PoC/Data-Pipeline/dags/sql/curated_layer/: clinical_features.sql  dim_patient.sql  fact_hospital_admission.sql  fact_icu_stay.sql  fact_transfers.sql  patient_split_assignment.sql
PoC/Data-Pipeline/dags/sql/federated_layer/: hospital_a_data.sql  hospital_b_data.sql  hospital_c_data.sql
PoC/Data-Pipeline/dags/sql/verification_layer/: data_leakage_check.sql  dataset_statistics.sql
PoC/Data-Pipeline/dags/templates/: email_failure_subject.txt  failure_email_template.html
PoC/Data-Pipeline/dags/utils/: __init__.py  config.py  dvc_handler.py  email_callbacks.py  schema_utils.py  schema_validator.py  sql_utils.py  storage.py  task_functions.py  validation.py
PoC/Data-Pipeline/scripts/: cleanup.sh  init_dvc_root.sh
PoC/Data-Pipeline/tests/: test_dag_integrity.py  test_data_leakage.py  test_dvc_setup.py
PoC/Model-Pipeline/himas-model-pipeline/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mlflow  README.md  bias_detection.py  docker-compose.yml  evaluate_model.py  pyproject.toml
PoC/Model-Pipeline/himas-model-pipeline/.github/workflows/: ci-flwr-train.yml
PoC/Model-Pipeline/himas-model-pipeline/bias_detection/: BIAS_DETECTION.md  README.md  __init__.py  bias_checker.py  detect_bias.py  utils.py
PoC/Model-Pipeline/himas-model-pipeline/bias_detection_results/reports/: bias_report_20251116_170344.json  bias_report_20251116_224957.json  bias_summary.json
PoC/Model-Pipeline/himas-model-pipeline/evaluation_results/: evaluation_metrics_20251107_150521.json  evaluation_metrics_20251108_234132.json  evaluation_report_20251107_150521.md  evaluation_report_20251108_234132.md
PoC/Model-Pipeline/himas-model-pipeline/evaluation_results/results/: evaluation_results_20251114_002515.json  evaluation_results_20251114_010525.json  (+4 more)
PoC/Model-Pipeline/himas-model-pipeline/himas_model_pipeline/: __init__.py  client_app.py  server_app.py  task.py
PoC/Model-Pipeline/himas-model-pipeline/hyperparameters/: hospital_a_best_hyperparameters.json  hospital_b_best_hyperparameters.json  hospital_c_best_hyperparameters.json
PoC/Model-Pipeline/himas-model-pipeline/scripts/: Model_Pipeline_Keras_Tuner.ipynb  evaluate_model.py  model_sensitivity_analysis.py  optimize_threshold.py  run_hparam_sweep.py
PoC/Model-Pipeline/himas-model-pipeline/training_results/: evaluation_metrics_20251113_212154.json  evaluation_metrics_20251114_005048.json  evaluation_metrics_20251114_010644.json  evaluation_metrics_20251114_165107.json  evaluation_metrics_20251116_164456.json  evaluation_metrics_20251116_205708.json  evaluation_metrics_20251116_210006.json  evaluation_metrics_20251116_212117.json  evaluation_metrics_20251116_221701.json  evaluation_metrics_20251116_223919.json  evaluation_metrics_20251116_225033.json  training_metrics_20251113_212154.json  training_metrics_20251114_005048.json  training_metrics_20251114_010644.json  training_metrics_20251114_165107.json  training_metrics_20251116_164456.json  training_metrics_20251116_205708.json  training_metrics_20251116_210006.json  training_metrics_20251116_212117.json  training_metrics_20251116_221701.json  training_metrics_20251116_223709.json  training_metrics_20251116_223919.json  training_metrics_20251116_225033.json
(+73 files in other folders)
