[project]
name = "himas-mlops-data-pipeline"
version = "1.0.0"
description = "Healthcare Intelligence Multi-Agent System - Federated Learning MLOps Pipeline"
authors = [
    {name = "Yash Khare", email = "khare.y@northeastern.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core
    "apache-airflow",
    "pandas",
    "numpy",
    "scikit-learn",

    # BigQuery
    "google-cloud-bigquery",
    "pandas-gbq",
    "db-dtypes",

    # Data Validation
    "great-expectations",

    # Data Versioning
    "dvc",
    "dvc-gs",
    "sqlalchemy-bigquery",

    # Logging
    "python-json-logger",

    # Utilities
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",

    # Code Quality
    "black",
    "isort",
    "flake8",
    "pylint",
    "mypy",

    # Pre-commit
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | \.dvc
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring BigQuery",
    "slow: Slow running tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"