# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "himas-model-pipeline"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow>=2.11.1,<2.18.0",
    "scikit-learn>=1.3.0",
    "google-cloud-bigquery>=3.11.0",
    "db-dtypes>=1.1.1",  # Required for BigQuery data types
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "himas"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "himas_model_pipeline.server_app:app"
clientapp = "himas_model_pipeline.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 10
local-epochs = 5
batch-size = 32
fraction-train = 1.0    # Use all hospitals for training
fraction-evaluate = 1.0 # Use all hospitals for evaluation
verbose = true
random-seed = 42        # Random seed for reproducibility

# Differential Privacy configuration
enable-differential-privacy = true
dp-noise-multiplier = 1.0
dp-clipping-norm = 1.0
dp-num-sampled-clients = 3

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 3

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
